--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,9 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
-#Custom Ignores
+# Custom Ignores
 
 Assets/Graphics/
 Assets/Animation/
+Assets/Audio/
+Assets/DinoFracture/
